<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.iamcontent</groupId>
	<artifactId>public-java</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>Publicly available Java.</description>
    <licenses>
        <license>
            <name>GNU General Public License v2.0</name>
            <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
            <comments>A copyleft license that requires anyone who distributes this code or a derivative work to make the source available under the same terms.</comments>
        </license>
    </licenses>
    
	<modules>
        <module>iamcontent-core</module>
		<module>io</module>
		<module>devices</module>
		<module>robots</module>
	</modules>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.usb4java</groupId>
				<artifactId>usb4java-javax</artifactId>
				<version>1.2.0</version>
			</dependency>
			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.1</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.10.19</version>
                <scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>